--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a24078.pratice_wang.MainActivity">
+    tools:context="com.example.a24078.myapplication.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
