--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation" />
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_above="@id/bottom_navigation"
-        ></view>
+        ></View>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
